infrastructure/security/vault/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: vault
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.relyq.dev
spec:
  hostnames:
    - vault.relyq.dev
  parentRefs:
    - name: gateway-internal
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: vault-ui
          kind: Service
          port: 8200
